--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,12 +65,14 @@ body.fixed-top-nav {
 body.sticky-bottom-footer {
     padding-bottom:0;
 }
-
+/****************************************************************************/
 .content-box {
     border: 2px solid #000; /* Add black border */
     padding: 15px;          /* Add padding inside the box */
     margin-bottom: 20px;    /* Add margin below the box */
 }
+
+/****************************************************************************/
 
 .container {
     max-width:800px;
