--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,10 +218,10 @@ body.sticky-bottom-footer {
     margin-bottom: 10px;
   }
   .competition-sqe-title {
-    text-align: center;
-    font-weight: 400;
-    /* text-decoration: underline; */
-    margin-bottom: 10px;
+    text-align: left;
+    font-weight: 500;
+    text-decoration: underline;
+    margin-bottom: 20px;
     font-size: 24px;
   }
   .competition-sqe-title-1 {
@@ -317,6 +317,16 @@ nav ul {
     scroll-behavior: smooth;
     scroll-padding-top: 100px;  /* Adjust this value as needed */
   }
+
+
+
+/****************************************************************************/
+/****************************************************************************/
+/****************************************************************************/
+/****************************************************************************/
+/****************************************************************************/
+/****************************************************************************/
+/****************************************************************************/
 /****************************************************************************/
 
 .container {
