--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,6 +210,15 @@ body.sticky-bottom-footer {
     margin: 0 auto;
   }
 
+  .info-box1 {
+    border: 2px solid #00c2e9; /* Light blue border */
+    background-color: #eafcff; /* Light blue background */
+    padding: 15px;
+    border-radius: 8px; /* Slightly round the edges */
+    width: 100%;
+    margin: 0 auto;
+  }
+
 
   .info-title {
     text-align: center;
