--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,11 +66,15 @@ body.sticky-bottom-footer {
     padding-bottom:0;
 }
 /****************************************************************************/
+
 .content-box {
     border: 2px solid #000; /* Add black border */
     padding: 15px;          /* Add padding inside the box */
     margin-bottom: 20px;    /* Add margin below the box */
+    border-radius: 10px;    /* Add rounded corners */
+    background-color: #fafafa; /* Add background color */
 }
+
 
 /* Styling the table */
 .styled-table {
