--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -361,7 +361,7 @@ nav ul {
   }
 
 
-
+  
 /****************************************************************************/
 /****************************************************************************/
 /****************************************************************************/
@@ -841,19 +841,29 @@ footer.sticky-bottom {
     font-style:normal;
 }
 
+/* Button base style */
 .publications ol.bibliography li .links a.btn {
-    color:var(--global-text-color);
-    border:1px solid var(--global-text-color);
-    padding-left:1rem;
-    padding-right:1rem;
-    padding-top:0.25rem;
-    padding-bottom:0.25rem;
+    color: white;
+    background-color: black;
+    border: 1px solid white;
+    border-radius: 15px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bold;
+    transition: all 0.3s ease;
 }
 
+/* Hover style */
 .publications ol.bibliography li .links a.btn:hover {
-    color:var(--global-theme-color);
-    border-color:var(--global-theme-color);
+    color: var(--global-theme-color);
+    background-color: transparent;
+    border-color: var(--global-theme-color);
 }
+
 
 .publications ol.bibliography li .hidden {
     font-size:0.875rem;
